@@ -11,7 +11,7 @@ HOMEPAGE="http://www.tim-mann.org/xtrs.html"
 SRC_URI="http://www.tim-mann.org/trs80/${P}.tar.gz
 	ls-dos? (
 		http://www.tim-mann.org/trs80/ld4-631.zip
-		http://dev.gentoo.org/~ulm/distfiles/ld4-631l.xdelta
+		http://dev.gentoo.org/~ulm/distfiles/ld4-631l.xd3
 	)"
 
 LICENSE="xtrs ls-dos? ( freedist )"
@@ -23,14 +23,15 @@ RDEPEND="sys-libs/ncurses
 	sys-libs/readline
 	>=x11-libs/libX11-1.0.0"
 DEPEND="${RDEPEND}
-	ls-dos? ( app-arch/unzip dev-util/xdelta )"
+	ls-dos? ( app-arch/unzip dev-util/xdelta:3 )"
 
 src_prepare() {
 	sed -i -e 's/$(CC) -o/$(CC) $(LDFLAGS) -o/' Makefile || die
 	epatch "${FILESDIR}/${P}-ulm.patch"
 	if use ls-dos; then
-		xdelta3 -dfs "${WORKDIR}"/ld4-631.dsk "${DISTDIR}"/ld4-631l.xdelta \
-			"${WORKDIR}"/ld4-631.dsk || die
+		cd "${WORKDIR}" || die
+		xdelta3 -d -s ld4-631.dsk "${DISTDIR}"/ld4-631l.xd3 out.dsk || die
+		mv out.dsk ld4-631.dsk || die
 	fi
 }
 
