@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r51.ebuild:
+  Fix dependency on xdelta:3. Don't try in-place binary patching.
+
 *xtrs-4.9d-r51 (12 Apr 2014)
 
   12 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r50.ebuild,
